compelete owl slider

--- a/index.html
+++ b/index.html
@@ -302,7 +302,7 @@
     <section class="vertical-scrolling">
         <div class="box-activities">
 
-            <div class="container wrap-activities">
+            <div class="container wrap-activities p-0">
                 <div class="activities-app">
                     <div class="activities-slider-first">
                         <div id="carouselactivities" class="carousel slide carousel-fade" data-ride="carousel">
@@ -312,21 +312,21 @@
                                     <div class="activities-item">
                                         <div class="row d-flex justify-content-center align-items-center">
                                             <div class="col-md-5">
-                                               <div class="box-image-item">
-                                                   <div class="image-item-background">
-                                                       <img src="assets/img/eslimi.svg" alt="">
-                                                   </div>
-                                                   <div class="image-item">
-                                                       <img src="assets/img/Galaxy-motahari-1.png" alt="">
-                                                   </div>
-                                               </div>
+                                                <div class="box-image-item">
+                                                    <!--  <div class="image-item-background">
+                                                          <img src="assets/img/eslimi.svg" alt="">
+                                                      </div>-->
+                                                    <div class="image-item fadeIn">
+                                                        <img src="assets/img/Galaxy-motahari-1.png" alt="">
+                                                    </div>
+                                                </div>
 
 
                                             </div>
                                             <div class="col-md-7">
                                                 <div class="row">
                                                     <div class="col-12">
-                                                        <div class="image-app">
+                                                        <div class="image-app fadeInDown">
                                                             <div class="side-image-app">
                                                                 <img src="assets/img/motahari-chehre.png" alt="">
                                                             </div>
@@ -335,8 +335,8 @@
 
                                                     </div>
                                                     <div class="col-12">
-                                                        <h5 class="title">اپلیکیشن استاد مطهری</h5>
-                                                        <p class="caption"> اپلیکیشن جامع "استاد مطهری" به همت بنیاد حفظ
+                                                        <h5 class="title fadeInUp">اپلیکیشن استاد مطهری</h5>
+                                                        <p class="caption fadeInUp"> اپلیکیشن جامع "استاد مطهری" به همت بنیاد حفظ
                                                             و نشر آثار شهید علامه استاد مرتضی مطهری و توسط شرکت افق گستر
                                                             مبین شریف به شماره ثبت 489510
                                                             طراحی و پیاده سازی گردیده است.
@@ -347,11 +347,13 @@
                                                             کتابخوانی و دوره های آموزشی می باشد.
 
                                                         </p>
-                                                        <div class="activities-buttons">
-                                                            <button class="activities-btn property_btn" data-name="motahari">
+                                                        <div class="activities-buttons fadeInUp">
+                                                            <button class="activities-btn property_btn"
+                                                                    data-name="motahari">
                                                                 ویژگی ها
                                                             </button>
-                                                            <button class="activities-btn gallery_btn" data-name="motahari">
+                                                            <button class="activities-btn gallery_btn"
+                                                                    data-name="motahari">
                                                                 گالری
                                                             </button>
                                                         </div>
@@ -377,7 +379,7 @@
                                                     <div class="col-12">
                                                         <div class="image-app">
                                                             <div class="side-image-app">
-                                                            <img src="assets/img/system4.png" alt="">
+                                                                <img src="assets/img/system4.png" alt="">
                                                             </div>
                                                         </div>
 
@@ -421,7 +423,7 @@
                                                     <div class="col-12">
                                                         <div class="image-app">
                                                             <div class="side-image-app">
-                                                            <img src="assets/img/system4.png" alt="">
+                                                                <img src="assets/img/system4.png" alt="">
                                                             </div>
                                                         </div>
 
@@ -465,31 +467,28 @@
                 <div class="activities-property activities-property-motahari hidden">
                     <div class="row d-flex justify-content-center align-items-center">
                         <div class="col-6">
-                            <div class="head-property ">
+                            <div class="head-property fadeInDown">
                                 <div class="image-property">
                                     <div class="side-image-property">
                                         <img src="assets/img/motahari-chehre.png" alt="">
-                                </div>
+                                    </div>
 
                                 </div>
                                 <h5 class="title">اپلیکیشن استاد مطهری</h5>
                                 <small class="installation">با ۲۰,۰۰۰ نصب فعال</small>
                             </div>
-                                <div class="image-body-property">
-                                    <div class="box-image-item">
-                                        <div class="image-item-background">
-                                            <img src="assets/img/eslimi.svg" alt="">
-                                        </div>
-                                        <div class="image-item">
-                                            <img src="assets/img/Galaxy-motahari-1.png" alt="">
-                                        </div>
+                            <div class="image-body-property fadeInRight">
+                                <div class="box-image-item">
+                                    <div class="image-item">
+                                        <img src="assets/img/Galaxy-motahari-1.png" alt="">
                                     </div>
                                 </div>
+                            </div>
                         </div>
                         <div class="col-6">
                             <div class="box-pack-property box-pack-property1">
-                                <div class="pack-property">
-                                    <div class="icon-body-property">
+                                <div class="pack-property fadeInUp">
+                                    <div class="icon-body-property ">
                                         <img src="assets/img/open-book.svg" alt="">
                                     </div>
                                     <div class="text-property">
@@ -499,7 +498,7 @@
                                     </div>
 
                                 </div>
-                                <div class="pack-property">
+                                <div class="pack-property fadeInUp">
                                     <div class="icon-body-property">
                                         <img src="assets/img/classroom.svg" alt="">
                                     </div>
@@ -511,7 +510,7 @@
                                     </div>
 
                                 </div>
-                                <div class="pack-property">
+                                <div class="pack-property fadeInUp">
                                     <div class="icon-body-property">
                                         <img src="assets/img/medal.svg" alt="">
                                     </div>
@@ -524,14 +523,15 @@
                                     </div>
 
                                 </div>
-                                <div class="pack-property">
+                                <div class="pack-property fadeInUp">
                                     <div class="icon-body-property">
                                         <img src="assets/img/headphones.svg" alt="">
                                     </div>
                                     <div class="text-property">
                                         <h6 class="title">فایل صوتی</h6>
                                         <p class="explain">
-                                            شما می توانید فایل های صوتی استاد مطهری را به صورت رایگان انلود و گوش نمایید.
+                                            شما می توانید فایل های صوتی استاد مطهری را به صورت رایگان انلود و گوش
+                                            نمایید.
                                         </p>
                                     </div>
 
@@ -546,7 +546,7 @@
                     </div>
                 </div>
                 <div class="activities-gallery activities-gallery-motahari hidden">
-                    <div class="head-gallery">
+                    <div class="head-gallery mt-1 mt-lg-5 fadeIn">
                         <div class="image-gallery">
                             <div class="side-image-gallery">
                                 <img src="assets/img/motahari-chehre.png" alt="">
@@ -556,7 +556,7 @@
                         <h5 class="title">اپلیکیشن استاد مطهری</h5>
                     </div>
 
-                    <div class="container" style="padding-right: 13%;padding-left:13%;">
+                    <div class="container owl-carousel-container zoomIn">
                         <div class="owl-carousel owl-theme owl-rtl">
 
                             <div class="item">
@@ -564,18 +564,18 @@
                                     <img src="assets/img/Galaxy-motahari-1.png" alt="">
                                 </div>
                                 <div class="owl-box-text">
-                                    <p class="owl-text">
+                                    <p class="owl-text fadeInUp">
                                         مسابقات
                                     </p>
                                 </div>
                             </div>
 
-                            <div class="item ">
+                            <div class="item">
                                 <div class="owl-image">
                                     <img src="assets/img/Galaxy-motahari-2.png" alt="">
                                 </div>
                                 <div class="owl-box-text">
-                                    <p class="owl-text">
+                                    <p class="owl-text fadeInUp">
                                         کتاب ها
                                     </p>
                                 </div>
@@ -585,7 +585,7 @@
                                     <img src="assets/img/Galaxy-motahari-3.png" alt="">
                                 </div>
                                 <div class="owl-box-text">
-                                    <p class="owl-text">
+                                    <p class="owl-text fadeInUp">
                                         دوره ها
                                     </p>
                                 </div>
@@ -598,9 +598,9 @@
                         <button class="back-button">x</button>
                     </div>
                 </div>
-                <div class="background-activities" >
+                <div class="background-activities">
                 </div>
-                <div class="background-border-activities" ></div>
+                <div class="background-border-activities"></div>
 
             </div>
             <div class="activities-Square">
@@ -619,13 +619,8 @@
         <div class="box-slider">
             <div class="container wrap-slider">
                 <div id="demo" class="carousel slide" data-ride="carousel">
-                   <!-- <ul class="carousel-indicators">
-                        <li data-target="#demo" data-slide-to="0" class="active"></li>
-                        <li data-target="#demo" data-slide-to="1"></li>
-                        <li data-target="#demo" data-slide-to="2"></li>
-                    </ul>-->
                     <div class="carousel-inner">
-                        <div class="carousel-item active" >
+                        <div class="carousel-item active">
                             <div class="slider-image">
                                 <div class="side-slider-image">
                                     <img src="assets/img/slider-computer.png" alt="Los Angeles">
@@ -640,7 +635,7 @@
                         <div class="carousel-item">
                             <div class="slider-image">
                                 <div class="side-slider-image">
-                                    <img src="assets/img/slider-danesh.png" alt="Chicago" >
+                                    <img src="assets/img/slider-danesh.png" alt="Chicago">
                                 </div>
 
                             </div>
@@ -652,7 +647,7 @@
                         <div class="carousel-item">
                             <div class="slider-image">
                                 <div class="side-slider-image">
-                                    <img src="assets/img/slider-rate.png" alt="New York" >
+                                    <img src="assets/img/slider-rate.png" alt="New York">
                                 </div>
 
                             </div>
@@ -662,10 +657,10 @@
                             </div>
                         </div>
                     </div>
-                    <a class="carousel-control-prev" href="#demo" data-slide="prev">
+                    <a class="carousel-control-next" href="#demo" data-slide="next">
                         <span class="carousel-control-prev-icon"></span>
                     </a>
-                    <a class="carousel-control-next" href="#demo" data-slide="next">
+                    <a class="carousel-control-prev" href="#demo" data-slide="prev" >
                         <span class="carousel-control-next-icon"></span>
                     </a>
                 </div>
